# pyKES

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  experiments.h5  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release-pypi.yml
docs/: releasing.md
examples/external_repo/: Home.py  README.md  config.py
examples/external_repo/pages/: 01_Data_Upload.py  02_Analysis_Results.py  03_Time_Series.py  __init__.py
modelling/: kinetic_model_with_bleaching_of_solution.py  loss_pathways_full_mechanism.py  loss_pathways_prototype.py
src/pyKES/: fitting_ODE.py  reaction_ODE.py  reaction_model.py
src/pyKES/database/: data_processing.py  database_experiments.py
src/pyKES/pathways/: pathways.py  transform_pathways_data.py
src/pyKES/plotting/: lighten_colors.py  plotting_pathways_transformed.py  plotting_tools.py
src/pyKES/streamlit_app/: Home.py  config_interface.py
src/pyKES/streamlit_app/components/: __init__.py  analysis_results_component.py  data_upload_component.py  home_component.py  time_series_component.py
src/pyKES/streamlit_app/pages/: Analysis_Results_Visualization.py  Data_Upload_and_Download.py  Data_Visualization.py  Plotting_Rates.py  Time_Series_Data_Visualization.py  __init__.py
src/pyKES/utilities/: calculate_absorption.py  find_nearest.py  get_experiments.py  harmonize_time_series.py  make_json_serializable.py  offset_correction.py  resolve_attributes.py  time_series_resampling.py
src/tests/: experiments.h5
src/tests/data/: 251204_O2_H2_Experiment_Overview.xlsx  260507_Complete.h5  260507_Complete.xlsx  260507_Complete_plus_2.xlsx  260507_Partial_A.h5  260507_Partial_A.xlsx  260507_Partial_B.h5  260507_Partial_B.xlsx  processing_functions_overview_df.py  raw_file_reading_functions.py
tests/: test_pathways.py
