[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyKES"
version = "0.1.0"
description = "Python package for kinetic modelling of chemical reaction networks."
authors = [
    {name = "Jacob Schneidewind", email = "pyH2A.pypi@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "matplotlib",
    "scipy",
    "h5py",
    "tables",
    "openpyxl",  
]

[project.urls]
"Homepage" = "https://github.com/jschneidewind/pyKES"
"Bug Tracker" = "https://github.com/jschneidewind/pyKES/issues"
